# tess-two

./: .gitignore  .travis.yml  BUILDING.md  CHANGELOG.md  ISSUE_TEMPLATE.md  README.md  build.gradle  gradle.properties  preparetests.cmd  preparetests.sh  runtests.sh  settings.gradle
example/: README.md  build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/assets/html/: about.html  changes.html  whatsnew.html
example/src/main/res/drawable/: shutter_button.xml
example/src/main/res/layout/: capture.xml  help.xml
example/src/main/res/values/: arrays.xml  colors.xml  ids.xml  strings.xml
example/src/main/res/xml/: preferences.xml
eyes-two/: .project  AndroidManifest.xml  README  build.gradle  build.xml  default.properties  proguard-rules.pro  project.properties
eyes-two/jni/: Application.mk
eyes-two/jni/common/: utils.h
eyes-two/jni/hydrogen/: Android.mk
eyes-two/jni/hydrogen/include/leptonica/: allheaders.h  alltypes.h  environ.h  jmorecfg.h.hide  leptprotos.h
eyes-two/jni/hydrogen/jni/: hydrogentextdetector.cpp  thresholder.cpp
eyes-two/jni/hydrogen/src/: validator.cpp
eyes-two/jni/imageutils/: blur-jni.cpp
eyes-two/jni/opticalflow/: Android.mk
eyes-two/res/layout/: optical_flow.xml  test.xml
eyes-two/res/values/: arrays.xml  strings.xml
eyes-two/src/main/: AndroidManifest.xml
eyes-two/src/main/jni/: Android.mk  Application.mk
eyes-two/src/main/jni/common/: Android.mk  time_log.cpp  time_log.h  types.h
eyes-two/src/main/jni/hydrogen/: Android.mk
eyes-two/src/main/jni/imageutils/: Android.mk  blur.cpp  similar-jni.cpp  similar.cpp
gradle/wrapper/: gradle-wrapper.properties
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
tess-two/: .gitignore  .project  AndroidManifest.xml  build.gradle  build.xml  proguard-rules.pro  project.properties
tess-two-test/: .classpath  .project  AndroidManifest.xml  build.gradle  default.properties  project.properties
tess-two-test/res/values/: strings.xml
tess-two-test/src/main/: AndroidManifest.xml
tess-two/jni/: Android.mk  Application.mk
tess-two/jni/com_googlecode_leptonica_android/: Android.mk  box.cpp  boxa.cpp  common.h  config_auto.h  jni.cpp  pix.cpp  pixa.cpp  readfile.cpp  utilities.cpp  writefile.cpp
tess-two/jni/com_googlecode_leptonica_android/src/: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README.html  README.md  aclocal.m4  appveyor.yml  autobuild  build.sh  configure  configure.ac  endiantest.c  lept.pc.in  style-guide.txt  version-notes.html
tess-two/jni/com_googlecode_leptonica_android/src/cmake/: Configure.cmake
tess-two/jni/com_googlecode_leptonica_android/src/cmake/templates/: LeptonicaConfig.cmake.in
tess-two/jni/com_googlecode_leptonica_android/src/config/: config.h.in  config.h.in~  ltmain.sh
tess-two/jni/com_googlecode_leptonica_android/src/prog/: CMakeLists.txt  Makefile.am  Makefile.am.debian  Makefile.in  adaptmap_dark.c  adaptmap_reg.c  adaptmaptest.c  adaptnorm_reg.c  affine_reg.c  alltests_reg.c  alphaclean_reg.c  alphaops_reg.c  alphaxform_reg.c  arabic_lines.c  arithtest.c  autogen.137.c  autogentest1.c  autogentest2.c  barcodetest.c  baselinetest.c  bilateral_reg.c  bilinear_reg.c  binarize_reg.c  binarize_set.c  binarizefiles.c  bincompare.c  binmorph1_reg.c  binmorph2_reg.c  binmorph3_reg.c  binmorph4_reg.c  binmorph5_reg.c  blend1_reg.c  blend2_reg.c  blend3_reg.c  blend4_reg.c  blend_reg.c  blendcmaptest.c  blendtest1.c  boxa1_reg.c  boxa2_reg.c  (+245 more)
tess-two/jni/com_googlecode_leptonica_android/src/prog/bak/: alltests_reg.c  alphaops_reg.c  alphaxform_reg.c  binarize_reg.c  bincompare.c  binmorph3_reg.c  blend_reg.c  blendcmaptest.c  byteatest.c  ccbordtest.c  ccthin2_reg.c  coloring_reg.c  colormask_reg.c  colorquant_reg.c  colorseg_reg.c  colorspacetest.c  compare_reg.c  comparepages.c  conncomp_reg.c  contrasttest.c  conversion_reg.c  convertfilestopdf.c  convertsegfilestopdf.c  convertsegfilestops.c  converttobmp.c  converttops.c  convolve_reg.c  convolvetest.c  dewarp_reg.c  dewarptest1.c  dewarptest2.c  dewarptest3.c  digitprep1.c  distance_reg.c  dna_reg.c  dwamorph1_reg.c  enhance_reg.c  equal_reg.c  extrema_reg.c  fhmtautogen.c  (+71 more)
tess-two/jni/com_googlecode_leptonica_android/src/prog/recog/digits/: bootnum1.pa
tess-two/jni/com_googlecode_leptonica_android/src/src/: CMakeLists.txt  Makefile.am  Makefile.in  adaptmap.c  affine.c  affinecompose.c  allheaders_top.txt  alltypes.h  arithlow.c  array.h  arrayaccess.c  arrayaccess.h.vc  bardecode.c  baseline.c  bbuffer.c  bilateral.c  bilinear.c  binarize.c  binexpand.c  binexpandlow.c  binreduce.c  binreducelow.c  blend.c  bmf.c  bmpio.c  bmpiostub.c  bootnumgen.c  bootnumgen1.c  bootnumgen2.c  bootnumgen3.c  boxbasic.c  boxfunc1.c  boxfunc2.c  boxfunc3.c  boxfunc4.c  bytearray.c  ccbord.c  ccthin.c  classapp.c  colorcontent.c  (+166 more)
tess-two/jni/com_googlecode_leptonica_android/stdio/: extrastdio.h  fmemopen.c  fopencookie.c  open_memstream.c
tess-two/jni/com_googlecode_tesseract_android/: Android.mk  pageiterator.cpp  resultiterator.cpp  tessbaseapi.cpp
tess-two/jni/com_googlecode_tesseract_android/src/: configure
tess-two/jni/libjpeg/: Android.mk  jerror.c
tess-two/jni/libpng/: ANNOUNCE  Android.bp  Android.mk  CHANGES  CMakeLists.txt  LICENSE  Makefile.am  README.android  README.version  configure.ac  libpng-manual.txt  libpng.3  libpngpf.3  png.5  png.c  png.h  pngerror.c  pnglibconf.h  pngpread.c  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtest.c  pngwutil.c  updatenotes
tess-two/jni/libpng/scripts/: README.txt  def.c  libpng-config-head.in  libpng.pc.in  makefile.cegcc  makefile.linux  makefile.msys  makefile.ne12bsd  makefile.netbsd  makefile.openbsd  pnglibconf.dfa  pnglibconf.h.prebuilt  symbols.def
tess-two/jni/libpng/tests/: pngstest
tess-two/src/main/: AndroidManifest.xml
tess-two/src/main/jni/: Android.mk
(+639 files in other folders)
